[gd_scene load_steps=5 format=3 uid="uid://bte13uj03eqs0"]

[ext_resource type="Script" uid="uid://b52bnifdy8fjs" path="res://scripts/seleziona_partita.gd" id="1_pfe5p"]
[ext_resource type="FontFile" uid="uid://l0nqfp87alnk" path="res://assets/fonts/PressStart2P-Regular.ttf" id="2_fpsh5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fpsh5"]
bg_color = Color(0.301961, 0.168627, 0.109804, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0g3cc"]
bg_color = Color(0.188235, 0.313726, 0.313726, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[node name="SelezionaPartita" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pfe5p")

[node name="VBoxContainer" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fpsh5")

[node name="ContinuaPartitaButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
offset_left = 446.0
offset_top = 90.0
offset_right = 710.0
offset_bottom = 114.0
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.952941, 0.721569, 0.196078, 1)
theme_override_fonts/font = ExtResource("2_fpsh5")
text = "Continua Partita"

[node name="NuovaPartitaButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
offset_left = 469.0
offset_top = 342.0
offset_right = 685.0
offset_bottom = 366.0
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.952941, 0.721569, 0.196078, 1)
theme_override_fonts/font = ExtResource("2_fpsh5")
text = "Nuova Partita"

[node name="IndietroButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
offset_left = 507.0
offset_top = 406.0
offset_right = 643.0
offset_bottom = 430.0
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.952941, 0.721569, 0.196078, 1)
theme_override_fonts/font = ExtResource("2_fpsh5")
text = "Indietro"

[node name="Stats" type="Panel" parent="VBoxContainer"]
layout_mode = 0
offset_left = 308.0
offset_top = 122.0
offset_right = 907.0
offset_bottom = 330.0
theme_override_styles/panel = SubResource("StyleBoxFlat_0g3cc")

[node name="SaluteMentaleLabel" type="Label" parent="VBoxContainer/Stats"]
layout_mode = 2
offset_left = 32.0
offset_top = 79.0
offset_right = 612.0
offset_bottom = 124.0
theme_override_fonts/font = ExtResource("2_fpsh5")
text = "a"

[node name="SoldiLabel" type="Label" parent="VBoxContainer/Stats"]
layout_mode = 2
offset_left = 32.0
offset_top = 16.0
offset_right = 532.0
offset_bottom = 60.0
theme_override_fonts/font = ExtResource("2_fpsh5")
text = "a"

[node name="GiornoLabel" type="Label" parent="VBoxContainer/Stats"]
layout_mode = 2
offset_left = 34.0
offset_top = 142.0
offset_right = 590.0
offset_bottom = 198.0
theme_override_fonts/font = ExtResource("2_fpsh5")
text = "a"

[connection signal="mouse_entered" from="VBoxContainer/ContinuaPartitaButton" to="." method="_on_continua_partita_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/ContinuaPartitaButton" to="." method="_on_continua_partita_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/NuovaPartitaButton" to="." method="_on_nuova_partita_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/NuovaPartitaButton" to="." method="_on_nuova_partita_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/IndietroButton" to="." method="_on_indietro_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/IndietroButton" to="." method="_on_indietro_button_pressed"]
